--- a/README.org
+++ b/README.org
@@ -183,6 +183,7 @@ Every selector requires an argument, even if it's just ~t~, e.g. ~:anything~, ~:
      -  Note that the ~:not~ group selector /creates/ a group with items it /does not/ match; it can be combined with ~:discard~ to discard items that /don't/ match.  For example, ~(:discard (:not (:priority "A")))~ as the first selector would mean that only priority ~A~ items would appear in the agenda, while ~(:discard (:priority "C"))~ would mean that any priority ~C~ items would not appear in the agenda.
 +  =:order= :: A number setting the order sections will be displayed in the agenda, lowest number first.  Defaults to =0=.
 +  =:order-multi= :: Set the order of multiple groups at once, like ~(:order-multi (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
++  =:take= :: Take the first N items in GROUP. If N is negative, take the last N items. For example, ~(:take (-3 group))~ will take the last 3 items from the group. The remainder of items are discarded. Note: The order of entries from GROUP is not guaranteed to be preserved, so ~:take~ may not always show expected entries. 
 
 *** Normal selectors
 
