--- a/README.org
+++ b/README.org
@@ -148,13 +148,11 @@ The groups apply to all agenda commands (at least, every one that calls ~org-age
 
 ** Group selectors
 
-Each group selector takes an argument which can be a single atom or a list, e.g. ~:tag~ takes a string or list of strings.  Some selectors are predicates, like ~:deadline~ or ~:habit~; for consistency, they also take an argument, but it is ignored.  
+Each group selector creates a group in the agenda containing the items it matches and consumes those items; any items it doesn't match are passed to the next group selector.  The selector ~:discard~ is an exception: it consumes any items it matches without creating an agenda group and passes through the rest to the next selector.
 
-A group selector creates a section in the agenda containing the items it matches, and any items it doesn't match are passed to the next group selector.
+Each group selector takes an argument which can be a single atom or a list, e.g. ~:tag~ takes a string or list of strings.  Some selectors are predicates, like ~:deadline~ or ~:habit~; for consistency, they also take an argument, but it is ignored.
 
-~:discard~ is a special exception to this: it simply discards any items it matches, and passes through the rest to the next group selector.
-
-Note that the ~:not~ group selector /creates/ a group with items it /does not/ match; it can be combined with ~:discard~ to discard items that /don't/ match, e.g. ~(:discard (:not (:priority "A")))~ as the first selector would mean that only priority ~A~ items would appear in the agenda, while ~(:discard (:priority "C"))~ would mean that any priority ~C~ items would not appear in the agenda.
+*Note:* The order of items may not be preserved after grouping due to the implementation's using hash tables.  Future versions may address this shortcoming.
 
 *** Keywords
 
@@ -182,6 +180,7 @@ Every selector requires an argument, even if it's just ~t~, e.g. ~:anything~, ~:
 +  ~:auto-ts~ :: This automatically groups items by the date of their latest timestamp anywhere in the entry, formatted according to variable ~org-super-agenda-date-format~.
 +  =:discard= :: Discard items that match selectors.  Any groups processed after this one will not see discarded items.  You might use this at the beginning or end of a list of groups, either to narrow down the list of items (used in combination with ~:not~), or to exclude items you're not interested in.
 +  =:not= :: Group ITEMS that match no selectors in GROUP.
+     -  Note that the ~:not~ group selector /creates/ a group with items it /does not/ match; it can be combined with ~:discard~ to discard items that /don't/ match.  For example, ~(:discard (:not (:priority "A")))~ as the first selector would mean that only priority ~A~ items would appear in the agenda, while ~(:discard (:priority "C"))~ would mean that any priority ~C~ items would not appear in the agenda.
 +  =:order= :: A number setting the order sections will be displayed in the agenda, lowest number first.  Defaults to =0=.
 +  =:order-multi= :: Set the order of multiple groups at once, like ~(:order-multi (2 (groupA) (groupB) ...))~ to set the order of these groups to 2.
 
