--- a/README.org
+++ b/README.org
@@ -242,6 +242,7 @@ As explained in the usage instructions and shown in the example, items are colle
 
 *Added*
 +  Selector ~:property~, which groups items with a property, optionally also matching a value or predicate.  (Thanks to [[https://github.com/weipe][Per Weijnitz]].)
++  Special selector ~:take~, which limits the number of items displayed in a group.  (Thanks to [[https://github.com/pkazmier][Pete Kazmier]].)
 
 ** 1.2
 
