--- a/README.org
+++ b/README.org
@@ -243,6 +243,7 @@ As explained in the usage instructions and shown in the example, items are colle
 *Added*
 +  Selector ~:property~, which groups items with a property, optionally also matching a value or predicate.  (Thanks to [[https://github.com/weipe][Per Weijnitz]].)
 +  Special selector ~:take~, which limits the number of items displayed in a group.  (Thanks to [[https://github.com/pkazmier][Pete Kazmier]].)
++  Option ~org-super-agenda-hide-empty-groups~, which hides empty groups.  (Thanks to [[https://github.com/cslux][Christian Schwarzgruber]].)
 
 ** 1.2
 
