--- a/README.org
+++ b/README.org
@@ -237,6 +237,10 @@ As explained in the usage instructions and shown in the example, items are colle
 :TOC:      0
 :END:
 
+** 1.4-pre
+
+Nothing new yet.
+
 ** 1.3
 
 *Additions*
